--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,9 @@
     "files.associations": {
         "cyw43_arch.h": "c",
         "ssd1306_conf.h": "c",
-        "pwm.pio.h": "c"
+        "pwm.pio.h": "c",
+        "config.h": "c",
+        "stdint.h": "c"
     },
 
     
