--- a/application/CMakeLists.txt
+++ b/application/CMakeLists.txt
@@ -26,6 +26,7 @@ add_executable(${PROJECT_NAME}
     src/io_exp.c
     src/utils.c
     src/my_flash.c
+    src/ble_communication.c
     #src/rtt/RTT/SEGGER_RTT.c 
     #src/rtt/RTT/SEGGER_RTT_printf.c
     src/server_common.c
