Add manual brightness control. Update effect loop (return effect state). Add PWM_set_all(). Update advertising name.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,7 +17,9 @@
         "pwm_pio.h": "c",
         "btstack.h": "c",
         "server_common.h": "c",
-        "temp_sensor.h": "c"
+        "temp_sensor.h": "c",
+        "ble_communication.h": "c",
+        "effects.h": "c"
     },
 
     
